Refactor components to work without view_component_reflex

--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -1,4 +1,4 @@
-<%= component_controller id: dom_id(@event, :hero), data: { 'hero--horizontal-event-open-in-sidebar': @open_in_sidebar } do %>
+<%= content_tag :div, id: dom_id(@event, :hero), data: { controller: 'hero--horizontal-event', 'hero--horizontal-event-open-in-sidebar': @open_in_sidebar } do %>
 	<div class="flex p-5 border-b md:border-0 border-gray-50">
 		<div class="pr-6 flex-1">
 			<div class="mb-1 text-sm  text-gray-400">
@@ -8,7 +8,6 @@
 											href:  event_path(@event),
 											data:  {
 												action:     'click->hero--horizontal-event#openEvent',
-												url:        event_path(@event),
 												'event-id': @event.id
 											},
 											class: 'font-semibold md:hover:underline mb-1 leading-snug text-gray-700' do %>
@@ -19,7 +18,7 @@
 				<span class="text-gray-500"><%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline' %></span>
 			</div>
 			<div class="flex my-1 -ml-2">
-				<%= reflex_tag :like, :div, class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
+				<%= content_tag :div, data: {action: 'click->hero--horizontal-event#like', 'event-id': @event.id}, class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
 					<svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
 																							{ 'text-gray-200 hover:text-gray-300':  !@user&.like?(@event),
 																								'text-green-500': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -27,7 +26,7 @@
 						<path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>
 					</svg>
 				<% end %>
-				<%= reflex_tag :dislike, :div, class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
+				<%= content_tag :div, data: {action: 'click->hero--horizontal-event#dislike', 'event-id': @event.id}, class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
 					<svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
 																							{ 'text-gray-200 hover:text-gray-300': !@user&.dislike?(@event),
 																								'text-red-500':  @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
