--- a/web/app/components/main_sidebar/calendar_component.html.erb
+++ b/web/app/components/main_sidebar/calendar_component.html.erb
@@ -1,5 +1,5 @@
-<%= component_controller id: 'my-agenda', class: 'mb-24' do %>
-  <div id="calendar" data-main-sidebar--my-agenda-target="calendar" class="mt-3 mb-24 select-none simple-calendar tap-highlight-none">
+<%= component_controller id: 'calendar', class: 'mb-24' do %>
+  <div id="calendar" data-main-sidebar--calendar-target="calendar" class="mt-3 mb-24 select-none simple-calendar tap-highlight-none">
     <div class="calendar-heading">
       <%= reflex_tag :prev_month, :div, class: 'cursor-pointer text-green-500 hover:bg-green-100 h-8 w-8 rounded-full flex justify-center items-center' do %>
         <svg class="h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -29,7 +29,7 @@
       <% date_range.each_slice(7) do |week| %>
         <tr>
           <% week.each do |day| %>
-            <%= content_tag :td, data: {key: key, action: 'click->main-sidebar--my-agenda#inDay', day: day.strftime}, class: td_classes_for(day) do %>
+            <%= content_tag :td, data: {key: key, action: 'click->main-sidebar--calendar#inDay', day: day.strftime}, class: td_classes_for(day) do %>
               <%= content_tag :div, class: 'mx-auto text-sm day-of-month' do %>
                 <%= day.strftime '%e' %>
               <% end %>
@@ -47,7 +47,7 @@
   </div>
 
 
-  <div id="my-agenda__list" style="<%= helpers.class_names 'hidden': @events.empty? %>">
+  <div id="calendar__list" style="<%= helpers.class_names 'hidden': @events.empty? %>">
     <div class="<%= helpers.class_names('mt-3 flex items-center px-2 py-1 mx-auto text-sm font-semibold text-white bg-green-500 rounded-full select-none w-content',
                                         'hidden': !@filter) %>">
       <svg class="h-5 mr-2 text-white fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -56,7 +56,7 @@
       </svg>
       <%= start_date.strftime("%d/%m/%Y") %>
     </div>
-    <%= reflex_tag :clear_filter, :div, id: 'my-agenda__clear-filter', class: helpers.class_names('mb-3 md:mb-0 px-5 text-center cursor-pointer underline text-gray-400 text-sm',
+    <%= reflex_tag :clear_filter, :div, id: 'calendar__clear-filter', class: helpers.class_names('mb-3 md:mb-0 px-5 text-center cursor-pointer underline text-gray-400 text-sm',
                                                                                                   'hidden': !@filter) do %>
       Remover filtro
     <% end %>
@@ -65,7 +65,7 @@
   </div>
 
   <% if @events.empty? %>
-    <div id="my-agenda__filter" class="p-2 mx-5 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
+    <div id="calendar__filter" class="p-2 mx-5 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
       Sem eventos na sua agenda neste dia.
       <%= reflex_tag :clear_filter, :div, class: 'text-center cursor-pointer underline text-gray-400 text-sm' do %>
         Remover filtro
