--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -1,4 +1,4 @@
-<%= component_controller do %>
+
 	<div class="md:px-5">
 		<% @events.group_by { |e| e.first_day_time.to_date.strftime("%Y-%m-%d") }.each do |group| %>
 			<div id="<%= "main-sidebar--group-#{group[0]}" %>" class="mb-5 md:mb-12 content-visibility-auto contain-intrinsic-size-md">
@@ -16,9 +16,8 @@
 					<% end %>
 				</div>
 				<div id="vertical-daily-events">
-					<%= render MainSidebar::HorizontalEventComponent.with_collection(group[1], user: @user, parent_key: key, open_in_sidebar: @open_in_sidebar) %>
+					<%= render MainSidebar::HorizontalEventComponent.with_collection(group[1], user: @user, open_in_sidebar: @open_in_sidebar) %>
 				</div>
 			</div>
 		<% end %>
 	</div>
-<% end %>
