--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -1,7 +1,7 @@
-<%= component_controller id: 'main-sidebar--large-event' do %>
+<%= content_tag :div, id: 'main-sidebar--large-event', data: { controller: 'main-sidebar--large-event', 'opened-event': @event&.id } do %>
 	<% if @event %>
 		<div class="relative mt-5 overflow-hidden bg-white border border-gray-100 shadow-lg h-screen-8/10 rounded-xl">
-			<div data-action="click->main-sidebar--large-event#closeEvent" class="fixed absolute top-0 right-0 z-50 p-1 mt-2 mr-3 text-gray-500 transition-transform duration-300 transform bg-white rounded-full shadow cursor-pointer hover:scale-105">
+			<div data-reflex="click->Event#close" class="fixed absolute top-0 right-0 z-50 p-1 mt-2 mr-3 text-gray-500 transition-transform duration-300 transform bg-white rounded-full shadow cursor-pointer hover:scale-105">
 				<svg class="w-6 h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 					<path d="M0 0h24v24H0V0z" fill="none"/>
 					<path d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"/>
@@ -39,10 +39,12 @@
 						<%= @event.details_name %>
 					</h1>
 					<div class="flex items-center -ml-1">
-						<%= reflex_tag :like,
-													 :div,
-													 id:    'main-sidebar--large-event-like',
-													 class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
+						<%= content_for :div,
+														id:    'main-sidebar--large-event-like',
+														data:  {
+															reflex: 'click->Event#open'
+														},
+														class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
 							<svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
 																									{ 'text-gray-500':  !@user&.like?(@event),
 																										'text-green-500': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -50,10 +52,12 @@
 								<path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>
 							</svg>
 						<% end %>
-						<%= reflex_tag :dislike,
-													 :div,
-													 id:    'main-sidebar--large-event-dislike',
-													 class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
+						<%= content_for :div,
+														id:    'main-sidebar--large-event-dislike',
+														data:  {
+															reflex: 'click->Event#open'
+														},
+														class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
 							<svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
 																									{ 'text-gray-500': !@user&.dislike?(@event),
 																										'text-red-500':  @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
