--- a/web/app/views/components/follow/_follow_button.html.erb
+++ b/web/app/views/components/follow/_follow_button.html.erb
@@ -1,28 +1,17 @@
-<%
-
-	return unless local_assigns.fetch(:user, false)
-	return unless local_assigns.fetch(:followable, false)
-
-%>
-
 <div class="<%= class_names('bg-white cursor-pointer duration-100 h-content hover:scale-110 inline-flex items-center pl-1 pr-2 py-1 rounded-full select-none space-x-1 tap-highlight-none text-gray-700 text-sm transform transition-transform',
-														{'bg-green-100 text-green-500': user.follow?(followable),
-														 'bg-gray-50 text-gray-700':   !user.follow?(followable)}) %>"
-		 data-action="click->cable-ready#perform"
-		 data-controller="cable-ready"
-		 data-cable-ready-perform="follow"
-		 data-cable-ready-followable-id="<%= followable.id %>"
-		 data-cable-ready-followable-type="<%= followable.class.name %>"
-		 data-cable-ready-follow-action="<%= user.follow?(followable) ? 'unfollow' : 'follow' %>"
-		 data-follow-button-target="button"
-		 id="<%= dom_id followable %>">
+														{ 'bg-green-100 text-green-500': @user.follow?(@followable),
+															'bg-gray-50 text-gray-700':    !@user.follow?(@followable) }) %>"
+		 data-action="click->Place#follow"
+		 data-followable-id="<%= @followable.id %>"
+		 data-followable-type="<%= @followable.class.name %>"
+		 id="<%= dom_id @followable %>">
 	<svg class="<%= class_names('fill-current h-4 hover:scale-150 px-1',
-															{'text-green-500': user.follow?(followable),
-															 'text-gray-500':  !user.follow?(followable)}) %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+															{ 'text-green-500': @user.follow?(@followable),
+																'text-gray-500':  !@user.follow?(@followable) }) %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"></path>
 		<path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"></path>
 	</svg>
 	<span>
-		<%= user.follow?(followable) ? 'Seguindo' : 'Seguir' %>
+		<%= @user.follow?(@followable) ? 'Seguindo' : 'Seguir' %>
 	</span>
 </div>
