--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -1,4 +1,4 @@
-<%= render Modal::SignInComponent.new(key: 'modal-sign-in', text: 'Crie uma conta para salvar eventos favoritos e receber recomendações únicas') %>
+<%= render Modal::SignInComponent.new(text: 'Crie uma conta para salvar eventos favoritos e receber recomendações únicas') %>
 
 <section class="min-h-screen mt-3 mb-24 is-animated md:mt-16">
 
@@ -13,14 +13,16 @@
   [
     <%= render partial: 'layouts/json_ld', collection: @upcoming_events, as: :event %>
   ]
+
+
 	</script>
 
 	<div class="mx-auto space-y-3 overflow-hidden is-animated md:border md:border-gray-100 md:rounded-2xl md:shadow-2xl md:max-w-screen-sm sm:container">
 		<div class="px-8 py-3 mx-3 space-y-3 text-center bg-white rounded-md shadow-sm">
 			<%= image_tag shrine_image_url(@place, :sm), {
-					loading: :lazy,
-					class:   'max-w-xs mx-auto rounded-full',
-					onerror: "this.style.opacity='0'"
+				loading: :lazy,
+				class:   'max-w-xs mx-auto rounded-full',
+				onerror: "this.style.opacity='0'"
 			} if @place.image_data? %>
 			<div>
 				<div class="flex-1 text-2xl font-bold leading-6 text-gray-700 group-hover:text-green-500 md:leading-normal md:pl-0 md:text-4xl">
@@ -31,10 +33,10 @@
 				</div>
 			</div>
 			<div>
-				<%= render partial: 'components/follow/follow_button', locals: {
-						user:       current_user,
-						followable: @place
-				} %>
+				<%= render(FollowButtonComponent.new(
+					user:       current_user,
+					followable: @place
+				)) %>
 			</div>
 		</div>
 
