--- a/web/app/views/users/agenda.html.erb
+++ b/web/app/views/users/agenda.html.erb
@@ -2,5 +2,5 @@
 <% content_for :back_button, true %>
 
 <section data-controller="page" data-page-target="page" class="pt-2 mx-auto space-y-2 bg-gray-50 is-animated lg:w-9/12 md:mt-40 sm:container">
-  <%= render MainSidebar::MyAgendaComponent.new(events: @liked_events, user: current_user) %>
+	<%= render LeftSidebar::CalendarComponent.new(events: @liked_events, start_date: @start_date, user: current_user, filter: @filter, indicators: @indicators) %>
 </section>
