--- a/web/app/views/feeds/neighborhood.html.erb
+++ b/web/app/views/feeds/neighborhood.html.erb
@@ -63,7 +63,7 @@
 										 show_similar_to:  session[:stimulus][:show_similar_to],
 										 html: {
 												 grid: {
-														 css: 'md:gap-5 md:grid md:grid-cols-4 md:grid-flow-row md:overflow-x-visible md:pl-0 md:row-gap-16 md:space-y-0 pb-2 px-5 space-y-5'
+														 css: 'md:gap-5 md:grid md:grid-cols-4 md:grid-flow-row md:overflow-x-visible md:pl-0 md:gap-y-16 md:space-y-0 pb-2 px-5 space-y-5'
 												 }
 										 }
 								 } %>
