--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -1,4 +1,4 @@
-<%= render Modal::SignInComponent.new( text: 'Crie uma conta para salvar eventos favoritos e receber recomendações únicas') %>
+<%= render Modal::SignInComponent.new(text: 'Crie uma conta para salvar eventos favoritos e receber recomendações únicas') %>
 
 <div id="main-content" class="md:grid md:grid-cols-12 max-w-screen-xl mx-auto">
 	<% unless mobile_device? %>
@@ -6,7 +6,7 @@
 						 id="left-sidebar"
 						 data-controller="simple-scrollbar"
 						 style="height: calc(100vh - 48px); top: 48px">
-			<%= render LeftSidebar::CalendarComponent.new(events: @liked_events, user: current_user) %>
+			<%= render LeftSidebar::CalendarComponent.new(events: @liked_events, start_date: Date.today, user: current_user, filter: false, indicators: @indicators) %>
 		</section>
 	<% end %>
 	<section id="main-sidebar" class="col-span-12 md:col-span-5">
@@ -28,13 +28,15 @@
 				</div>
 				<%= render MainSidebar::GroupByDayListComponent.new(events: @founded_events, user: current_user, open_in_sidebar: true) %>
 			<% else %>
-				<h2 class="text-2xl">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
+				<% if !params[:q] %>
+					<h2 class="text-md m-5">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path, class: 'text-green-500' %>.</h2>
+				<% end %>
 				<% if @categories.present? %>
 					<div class="mx-auto">
 						<div class="grid grid-cols-2 gap-3 px-5 mt-5 md:px-0">
 							<% @categories.each do |category| %>
-								<a href="<%= category_events_path category %>" class="antialiased bg-gray-50 cursor-pointer duration-200 flex h-20 inline-block justify-start mdc-chip me-chip px-4 py-1 rounded-lg select-none tap-highlight-none transform transition-colors w-full">
-									<div class="text-lg font-semibold text-gray-400">
+								<a href="<%= category_events_path category %>" class="antialiased bg-white shadow cursor-pointer duration-200 flex h-20 inline-block justify-start mdc-chip me-chip px-4 py-1 rounded-lg select-none tap-highlight-none transform transition-colors w-full">
+									<div class="text-lg font-semibold text-gray-500">
 										<%= category %>
 									</div>
 								</a>
@@ -53,7 +55,7 @@
 					 class="px-5 sticky top-24 z-10">
 				<div id="open-event"
 						 data-toggle-loader-target="off">
-					<%= render MainSidebar::LargeEventComponent.new(user: current_user) %>
+					<%= render MainSidebar::LargeEventComponent.new(user: current_user, event: nil) %>
 				</div>
 				<div
 					class="flex items-center justify-center hidden h-16 mt-5 bg-white border border-gray-100 shadow-lg h-screen-8/10 rounded-xl text-md"
